setting for weborder time in progress

--- a/ChefMate/Chefmate.Database/Chefmate.Database.csproj
+++ b/ChefMate/Chefmate.Database/Chefmate.Database.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Parser\ChefmateParser.cs" />
     <Compile Include="Parser\ChefmateParserVersion1_0.cs" />
     <Compile Include="Parser\ChefmateParserVersion1_1.cs" />
+    <Compile Include="Parser\ChefmateParserVersion1_2.cs" />
     <Compile Include="Parser\ParserFactory.cs" />
     <Compile Include="Parser\VersionParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
