--- a/ChefMate/Chefmate.Database/Chefmate.Database.csproj
+++ b/ChefMate/Chefmate.Database/Chefmate.Database.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Parser\ChefmateParserVersion1_0.cs" />
     <Compile Include="Parser\ChefmateParserVersion1_1.cs" />
     <Compile Include="Parser\ChefmateParserVersion1_2.cs" />
+    <Compile Include="Parser\ChefmateParserVersion1_3.cs" />
     <Compile Include="Parser\ParserFactory.cs" />
     <Compile Include="Parser\VersionParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
