--- a/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
+++ b/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Enum\DisplayOption.cs" />
     <Compile Include="Enum\ElementType.cs" />
     <Compile Include="Enum\Gender.cs" />
+    <Compile Include="Enum\GiftCardVoucherTransactionType.cs" />
     <Compile Include="Enum\ImplicationType.cs" />
     <Compile Include="Enum\MemberType.cs" />
     <Compile Include="Enum\PointType.cs" />
