bug fixing of refund

--- a/Office/Rave5/Rave.ini
+++ b/Office/Rave5/Rave.ini
@@ -8,8 +8,8 @@ Rave Delphi Syntax Compiler=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvC
 Rave Design-time Library=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvDesign50.bpl
 
 [History]
-ActiveProject=C:\Code\MenumateSourceCode\Menumate\Office\Source\Reports\StockReports.rav
-Project0=C:\Code\MenumateSourceCode\Menumate\Office\Source\Reports\StockReports.rav
+ActiveProject=C:\Cloud-Git\V6-Master\Office\Source\Reports\MMReports.rav
+Project0=C:\Cloud-Git\V6-Master\Office\Source\Reports\MMReports.rav
 Project1=C:\Code\MenumateSourceCode\Menumate\Office\Source\Reports\MMReports.rav
 Project2=
 Project3=
@@ -148,7 +148,7 @@ FloatTop=34
 DockList=Graphics;BarCodes;Standard;Report;TZoomToolbar;TColorToolbar;TLineEditorToolbar;TFillEditorToolbar;TFontEditorToolbar;TAlignmentToolbar
 
 [ToolWindows]
-LeftWidth=267
+LeftWidth=416
 RightWidth=314
 
 [ToolWindow_TProjectTreeToolWindow]
@@ -159,8 +159,8 @@ Visible=1
 
 [Editor]
 State=1
-Height=923
-Width=1688
+Height=953
+Width=1928
 Left=-4
 Top=-4
 PropertyWidth=127
