--- a/Office/Rave5/Rave.ini
+++ b/Office/Rave5/Rave.ini
@@ -1,16 +1,16 @@
 [Packages]
-Rave Graphics Components=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvGraphics50.bpl
-Rave Barcode Components=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvBarcode50.bpl
-Rave Standard Components=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvStandard50.bpl
-Rave Report Components=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvReport50.bpl
-Rave Language Engine=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvEngine50.bpl
-Rave Delphi Syntax Compiler=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvCompiler50.bpl
-Rave Design-time Library=C:\Code\MenumateSourceCode\Menumate\Office\Rave5\RvDesign50.bpl
+Rave Graphics Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvGraphics50.bpl
+Rave Barcode Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvBarcode50.bpl
+Rave Standard Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvStandard50.bpl
+Rave Report Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvReport50.bpl
+Rave Language Engine=C:\Git-Cloned\V6-Master\Office\Rave5\RvEngine50.bpl
+Rave Delphi Syntax Compiler=C:\Git-Cloned\V6-Master\Office\Rave5\RvCompiler50.bpl
+Rave Design-time Library=C:\Git-Cloned\V6-Master\Office\Rave5\RvDesign50.bpl
 
 [History]
-ActiveProject=C:\Code\MenumateSourceCode\Menumate\Office\Source\Reports\StockReports.rav
-Project0=C:\Code\MenumateSourceCode\Menumate\Office\Source\Reports\StockReports.rav
-Project1=C:\Code\MenumateSourceCode\Menumate\Office\Source\Reports\MMReports.rav
+ActiveProject=C:\Git-Cloned\V6-Master\Office\Source\Reports\MMReports.rav
+Project0=C:\Git-Cloned\V6-Master\Office\Source\Reports\MMReports.rav
+Project1=C:\Documents and Settings\Administrator\Desktop\Reports\discounts_reports\d1.rav
 Project2=
 Project3=
 Project4=
@@ -148,7 +148,7 @@ FloatTop=34
 DockList=Graphics;BarCodes;Standard;Report;TZoomToolbar;TColorToolbar;TLineEditorToolbar;TFillEditorToolbar;TFontEditorToolbar;TAlignmentToolbar
 
 [ToolWindows]
-LeftWidth=267
+LeftWidth=416
 RightWidth=314
 
 [ToolWindow_TProjectTreeToolWindow]
@@ -159,8 +159,8 @@ Visible=1
 
 [Editor]
 State=1
-Height=923
-Width=1688
+Height=953
+Width=1928
 Left=-4
 Top=-4
 PropertyWidth=127
