sales summary d font corrected

--- a/Office/Rave5/Rave.ini
+++ b/Office/Rave5/Rave.ini
@@ -1,16 +1,16 @@
 [Packages]
-Rave Graphics Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvGraphics50.bpl
-Rave Barcode Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvBarcode50.bpl
-Rave Standard Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvStandard50.bpl
-Rave Report Components=C:\Git-Cloned\V6-Master\Office\Rave5\RvReport50.bpl
-Rave Language Engine=C:\Git-Cloned\V6-Master\Office\Rave5\RvEngine50.bpl
-Rave Delphi Syntax Compiler=C:\Git-Cloned\V6-Master\Office\Rave5\RvCompiler50.bpl
-Rave Design-time Library=C:\Git-Cloned\V6-Master\Office\Rave5\RvDesign50.bpl
+Rave Graphics Components=C:\Cloud-Git\V6-Master\Office\Rave5\RvGraphics50.bpl
+Rave Barcode Components=C:\Cloud-Git\V6-Master\Office\Rave5\RvBarcode50.bpl
+Rave Standard Components=C:\Cloud-Git\V6-Master\Office\Rave5\RvStandard50.bpl
+Rave Report Components=C:\Cloud-Git\V6-Master\Office\Rave5\RvReport50.bpl
+Rave Language Engine=C:\Cloud-Git\V6-Master\Office\Rave5\RvEngine50.bpl
+Rave Delphi Syntax Compiler=C:\Cloud-Git\V6-Master\Office\Rave5\RvCompiler50.bpl
+Rave Design-time Library=C:\Cloud-Git\V6-Master\Office\Rave5\RvDesign50.bpl
 
 [History]
-ActiveProject=C:\Git-Cloned\V6-Master\Office\Source\Reports\MMReports.rav
-Project0=C:\Git-Cloned\V6-Master\Office\Source\Reports\MMReports.rav
-Project1=C:\Documents and Settings\Administrator\Desktop\Reports\discounts_reports\d1.rav
+ActiveProject=C:\Cloud-Git\V6-Master\Office\Source\Reports\MMReports.rav
+Project0=C:\Cloud-Git\V6-Master\Office\Source\Reports\MMReports.rav
+Project1=
 Project2=
 Project3=
 Project4=
@@ -159,7 +159,7 @@ Visible=1
 
 [Editor]
 State=1
-Height=953
+Height=995
 Width=1928
 Left=-4
 Top=-4
