Processing box implementation

--- a/ChefMate/Chefmate.UI/Chefmate.UI.csproj
+++ b/ChefMate/Chefmate.UI/Chefmate.UI.csproj
@@ -146,6 +146,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Views\ProcessingBox.xaml.cs">
+      <DependentUpon>ProcessingBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\RecallOrderView.xaml.cs">
       <DependentUpon>RecallOrderView.xaml</DependentUpon>
     </Compile>
@@ -183,6 +186,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ProcessingBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
