--- a/Office/Rave5/Rave.ini
+++ b/Office/Rave5/Rave.ini
@@ -1,15 +1,15 @@
 [Packages]
-Rave Graphics Components=C:\Code For P-10\V6-Master\Office\Rave5\RvGraphics50.bpl
-Rave Barcode Components=C:\Code For P-10\V6-Master\Office\Rave5\RvBarcode50.bpl
-Rave Standard Components=C:\Code For P-10\V6-Master\Office\Rave5\RvStandard50.bpl
-Rave Report Components=C:\Code For P-10\V6-Master\Office\Rave5\RvReport50.bpl
-Rave Language Engine=C:\Code For P-10\V6-Master\Office\Rave5\RvEngine50.bpl
-Rave Delphi Syntax Compiler=C:\Code For P-10\V6-Master\Office\Rave5\RvCompiler50.bpl
-Rave Design-time Library=C:\Code For P-10\V6-Master\Office\Rave5\RvDesign50.bpl
+Rave Graphics Components=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvGraphics50.bpl
+Rave Barcode Components=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvBarcode50.bpl
+Rave Standard Components=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvStandard50.bpl
+Rave Report Components=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvReport50.bpl
+Rave Language Engine=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvEngine50.bpl
+Rave Delphi Syntax Compiler=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvCompiler50.bpl
+Rave Design-time Library=C:\MM_Cloud_Git\V6-Master\Office\Rave5\RvDesign50.bpl
 
 [History]
-ActiveProject=C:\Code For P-10\V6-Master\Office\Source\Reports\MMReports.rav
-Project0=C:\Code For P-10\V6-Master\Office\Source\Reports\MMReports.rav
+ActiveProject=C:\MM_Cloud_Git\V6-Master\Office\Source\Reports\MMReports.rav
+Project0=C:\MM_Cloud_Git\V6-Master\Office\Source\Reports\MMReports.rav
 Project1=
 Project2=
 Project3=
