--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -125,6 +125,21 @@
         </host>
       </service>
 
+      <service behaviorConfiguration="ServiceSiHotBehavior" name="MenumateServices.WCFServices.SiHotIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceSiHot" contract="MenumateServices.WCFServices.ISiHotIntegrationWebService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8742/MenumateServices/SiHotService/" />
+          </baseAddresses>
+        </host>
+      </service>      
+
     </services>
 
     <behaviors>
@@ -170,6 +185,11 @@
           <useRequestHeadersForMetadataAddress/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
+        <behavior name="ServiceSiHotBehavior">
+          <serviceMetadata httpGetEnabled="true"/>
+          <useRequestHeadersForMetadataAddress/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+        </behavior>        
       </serviceBehaviors>
     </behaviors>
 
