--- a/MenuMate/Services/ServicesApp/XeroIntegration/AccountingIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/XeroIntegration/AccountingIntegration.csproj
@@ -77,9 +77,9 @@
     <Reference Include="MYOB.AccountRight.SDK">
       <HintPath>..\Assemblies\MYOB.AccountRight.API.SDK.2016.2.99\lib\net40\MYOB.AccountRight.SDK.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Assemblies\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\Assemblies\Newtonsoft.Json.7.0.1\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
       <HintPath>..\..\..\..\Assemblies\3rdParty\Nlog\32\NLog.dll</HintPath>
