Smart Connect service created. without any functionality.

--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -67,33 +67,35 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSmartLinkBehavior" name="MenumateServices.WCFServices.WCFServiceSmartLink">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceSmartLink" contract="MenumateServices.WCFServices.IWCFServiceSmartLink">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceSmartLink" contract="MenumateServices.WCFServices.IWCFServiceSmartLink">
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8738/MenumateServices/SmartLink/"/>
+            <add baseAddress="http://localhost:8738/MenumateServices/SmartLink/" />
           </baseAddresses>
         </host>
       </service>
       <service behaviorConfiguration="ServiceThorLinkBehavior" name="MenumateServices.WCFServices.WCFServiceThorlink">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceThorLink"
-                  contract="MenumateServices.WCFServices.IWCFServiceThorlink">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceThorLink" contract="MenumateServices.WCFServices.IWCFServiceThorlink">
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8739/MenumateServices/ThorLink/"/>
+            <add baseAddress="http://localhost:8739/MenumateServices/ThorLink/" />
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="ServicePocketVoucherBehavior" name="MenumateServices.WCFServices.PocketVoucherWebService">
+      <service behaviorConfiguration="ServicePocketVoucherBehavior"
+        name="MenumateServices.WCFServices.PocketVoucherWebService">
         <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
           name="basicHttpBinding_ServicePocketVoucher" contract="MenumateServices.WCFServices.IPocketVoucherWebService">
           <identity>
@@ -121,7 +123,8 @@
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="ServiceWalletPaymentsBehavior" name="MenumateServices.WCFServices.WCFServiceWalletPayments">
+      <service behaviorConfiguration="ServiceWalletPaymentsBehavior"
+        name="MenumateServices.WCFServices.WCFServiceWalletPayments">
         <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
           name="basicHttpBinding_ServiceWalletPayments" contract="MenumateServices.WCFServices.IWCFServiceWalletPayments">
           <identity>
@@ -148,8 +151,22 @@
             <add baseAddress="http://localhost:8742/MenumateServices/SiHotService/" />
           </baseAddresses>
         </host>
-      </service>      
-
+      </service>
+      <service behaviorConfiguration="ServiceSmartConnectBehavior"
+        name="MenumateServices.WCFServices.WCFServiceSmartConnect">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
+          name="basicHttpBinding_ServiceSmartConnect" contract="MenumateServices.WCFServices.IWCFSmartConnect">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8743/MenumateServices/SmartConnect/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
 
     <behaviors>
@@ -201,6 +218,11 @@
           <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>        
         <behavior name="ServiceWalletPaymentsBehavior">
+          <serviceMetadata httpGetEnabled="true"/>
+          <useRequestHeadersForMetadataAddress/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+        </behavior>
+        <behavior name="ServiceSmartConnectBehavior">
           <serviceMetadata httpGetEnabled="true"/>
           <useRequestHeadersForMetadataAddress/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
