--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -1,18 +1,17 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="MenumateServices.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="MenumateServices.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="MenumateServices.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="MenumateServices.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="ServiceWebMateBehavior" name="MenumateServices.WCFServices.WCFServiceWebMate">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceWebMate" contract="MenumateServices.WCFServices.IWCFServiceWebMate">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceWebMate" contract="MenumateServices.WCFServices.IWCFServiceWebMate">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -25,8 +24,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceLoyaltyMateBehavior" name="MenumateServices.WCFServices.WCFServiceLoyaltyMate">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceLoyaltyMate" contract="MenumateServices.WCFServices.IWCFServiceLoyaltyMate">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceLoyaltyMate" contract="MenumateServices.WCFServices.IWCFServiceLoyaltyMate">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -39,8 +37,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceChefMateBehavior" name="MenumateServices.WCFServices.WCFServiceChefMate">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceChefMate" contract="MenumateServices.WCFServices.IWCFServiceChefMate">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceChefMate" contract="MenumateServices.WCFServices.IWCFServiceChefMate">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -53,8 +50,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceClippBehavior" name="MenumateServices.WCFServices.ClippIntergrationWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceClipp" contract="MenumateServices.WCFServices.IClippIntergrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceClipp" contract="MenumateServices.WCFServices.IClippIntergrationWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -69,33 +65,31 @@
       <service behaviorConfiguration="ServiceSmartLinkBehavior" name="MenumateServices.WCFServices.WCFServiceSmartLink">
         <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceSmartLink" contract="MenumateServices.WCFServices.IWCFServiceSmartLink">
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8738/MenumateServices/SmartLink/"/>
+            <add baseAddress="http://localhost:8738/MenumateServices/SmartLink/" />
           </baseAddresses>
         </host>
       </service>
       <service behaviorConfiguration="ServiceThorLinkBehavior" name="MenumateServices.WCFServices.WCFServiceThorlink">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceThorLink"
-                  contract="MenumateServices.WCFServices.IWCFServiceThorlink">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceThorLink" contract="MenumateServices.WCFServices.IWCFServiceThorlink">
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8739/MenumateServices/ThorLink/"/>
+            <add baseAddress="http://localhost:8739/MenumateServices/ThorLink/" />
           </baseAddresses>
         </host>
       </service>
       <service behaviorConfiguration="ServicePocketVoucherBehavior" name="MenumateServices.WCFServices.PocketVoucherWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServicePocketVoucher" contract="MenumateServices.WCFServices.IPocketVoucherWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServicePocketVoucher" contract="MenumateServices.WCFServices.IPocketVoucherWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -108,8 +102,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSalesForceBehavior" name="MenumateServices.WCFServices.SalesForceIntegrationWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceSalesForce" contract="MenumateServices.WCFServices.ISalesForceIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceSalesForce" contract="MenumateServices.WCFServices.ISalesForceIntegrationWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -122,8 +115,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceWalletPaymentsBehavior" name="MenumateServices.WCFServices.WCFServiceWalletPayments">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceWalletPayments" contract="MenumateServices.WCFServices.IWCFServiceWalletPayments">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceWalletPayments" contract="MenumateServices.WCFServices.IWCFServiceWalletPayments">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -136,8 +128,7 @@
         </host>
       </service>
       <service behaviorConfiguration="ServiceSiHotBehavior" name="MenumateServices.WCFServices.SiHotIntegrationWebService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration"
-          name="basicHttpBinding_ServiceSiHot" contract="MenumateServices.WCFServices.ISiHotIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceSiHot" contract="MenumateServices.WCFServices.ISiHotIntegrationWebService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -155,55 +146,55 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="ServiceWebMateBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceLoyaltyMateBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceChefMateBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="false"/>
-          <serviceThrottling maxConcurrentCalls="1" maxConcurrentSessions="1" maxConcurrentInstances="1"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceThrottling maxConcurrentCalls="1" maxConcurrentSessions="1" maxConcurrentInstances="1" />
         </behavior>
         <behavior name="ServiceClippBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServicePocketVoucherBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceSalesForceBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceSmartLinkBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceThorLinkBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceSiHotBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>        
         <behavior name="ServiceWalletPaymentsBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
-          <useRequestHeadersForMetadataAddress/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -211,42 +202,32 @@
     <bindings>
       <basicHttpBinding>
         <binding name="basicHttpBindingConfiguration" maxBufferPoolSize="1048576" maxBufferSize="99999999" maxReceivedMessageSize="99999999" allowCookies="true">
-          <readerQuotas maxArrayLength="99999999"/>
+          <readerQuotas maxArrayLength="99999999" />
           <security>
             <transport>
-              <extendedProtectionPolicy policyEnforcement="Never"/>
+              <extendedProtectionPolicy policyEnforcement="Never" />
             </transport>
           </security>
         </binding>
         <binding name="longTimeoutHttpBindingConfiguration" receiveTimeout="00:25:00" sendTimeout="00:25:00" maxBufferPoolSize="1048576" maxBufferSize="99999999" maxReceivedMessageSize="99999999" allowCookies="true">
-          <readerQuotas maxArrayLength="99999999"/>
+          <readerQuotas maxArrayLength="99999999" />
           <security>
             <transport>
-              <extendedProtectionPolicy policyEnforcement="Never"/>
+              <extendedProtectionPolicy policyEnforcement="Never" />
             </transport>
           </security>
         </binding>
-        <binding name="BasicHttpBinding_IRedemptionServiceV1" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:25:00" sendTimeout="00:01:00"
-          allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-          messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-          useDefaultWebProxy="true">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+        <binding name="BasicHttpBinding_IRedemptionServiceV1" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:25:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <security mode="TransportWithMessageCredential">
-            <transport clientCredentialType="None" proxyCredentialType="None"
-                realm="" />
+            <transport clientCredentialType="None" proxyCredentialType="None" realm="" />
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://services.host.pocketvouchers.com/Redemption.svc"
-          binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRedemptionServiceV1"
-          contract="PocketVoucherServiceReference.IRedemptionServiceV1"
-          name="BasicHttpBinding_IRedemptionServiceV1" />
+      <endpoint address="https://services.host.pocketvouchers.com/Redemption.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRedemptionServiceV1" contract="PocketVoucherServiceReference.IRedemptionServiceV1" name="BasicHttpBinding_IRedemptionServiceV1" />
     </client>    
   </system.serviceModel>
 
@@ -303,7 +284,7 @@
     </MenumateServices.Properties.Settings>
   </applicationSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
   <userSettings>
     <MenumateServices.Properties.Settings>
@@ -318,8 +299,12 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="FirebirdSql.Data.FirebirdClient" publicKeyToken="3750ABCC3150B00C" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.6.5.0" newVersion="2.6.5.0"/>
+        <assemblyIdentity name="FirebirdSql.Data.FirebirdClient" publicKeyToken="3750ABCC3150B00C" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.5.0" newVersion="2.6.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
